--- a/_columns/The_Big_Picture/zh-cn/2024-12-18.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-18.md
@@ -1,7 +1,19 @@
 ---
 layout: content
 title: >-
-  Stock Market Plunges After Fed Trims Rate-Cut Plans; These Signals Tell Investors To Alter Course
+  Stock Market Plunges After Fed Trims Rate-Cut Plans; These Signals Tell Investors To Alter Course	
+
+
+
+
+
+重试
+  
+        
+
+
+
+错误原因
 date: 2024-12-18 17:47 -0800
 author: JUAN CARLOS ARANCIBIA
 ---
@@ -10,108 +22,264 @@ author: JUAN CARLOS ARANCIBIA
 
 
 
-The Federal Reserve was in no holiday mood Wednesday as it indicated plans to cut interest rates only twice next year, a slower pace than under previous forecasts. The stock market sold off, and indexes broke below important chart levels.
+The Federal Reserve was in no holiday mood Wednesday as it indicated plans to cut interest rates only twice next year, a slower pace than under previous forecasts. The stock market sold off, and indexes broke below important chart levels.[重试
+  
+ 
 
 
-Losses in the major indexes were the heaviest since at least early August and among the worst ever on a Fed decision day.
 
+错误原因](javascript:void(0))
 
-The S&P 500 lost nearly 3% and closed below its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/) as well as its longer-term [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/). The index made its lowest close since Nov. 5 and suffered its worst Fed-day loss since Jan. 29, 2009, according to Dow Jones Market Data.
 
+Losses in the major indexes were the heaviest since at least early August and among the worst ever on a Fed decision day.[重试
+  
+ 
 
 
 
-The Nasdaq composite slid nearly 3.6% and closed below the 21-day line also. Its loss Wednesday wiped out most of the December gains, and with it the composite's leadership it had carefully crafted. It was its largest loss on a Fed decision day since March 20, 2001.
+错误原因](javascript:void(0))
 
 
-The Dow Jones Industrial Average fell 2.6% for its 10th consecutive decline — the longest since an 11-day losing streak that ended Oct. 4, 1974, according to Dow Jones Market Data. The Dow also fell below the 50-day average.
+The S&P 500 lost nearly 3% and closed below its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/) as well as its longer-term [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/). The index made its lowest close since Nov. 5 and suffered its worst Fed-day loss since Jan. 29, 2009, according to Dow Jones Market Data.[重试
+  
+ 
 
 
-Small caps, which are more sensitive to interest rates, plummeted. The Russell 2000 sold off 4.4% and pierced its 50-day moving average. It was the Russell's worst performance on a Fed decision day ever recorded.
 
+错误原因](javascript:void(0))
 
-Volume rose on the Nasdaq exchange and New York Stock Exchange, which confirmed a [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) for both the Nasdaq composite and S&P 500 indexes. Institutional-caliber selling is quickly building up. That danger, plus the break of support levels on the main stock indexes, is why Investor's Business Daily cut its recommended exposure level to 60%-80% from 80% to 100%.
 
 
-Breadth Worsens For Stock Market
---------------------------------
 
+The Nasdaq composite slid nearly 3.6% and closed below the 21-day line also. Its loss Wednesday wiped out most of the December gains, and with it the composite's leadership it had carefully crafted. It was its largest loss on a Fed decision day since March 20, 2001.[重试
+  
+ 
 
-Breadth was decisively bearish. Declining stocks topped advancers by more than 13-1 on the NYSE and by 6-1 on the Nasdaq, according to FactSet. All 11 S&P 500 sectors fell as did nearly 90% of IBD's industry groups.
 
 
-The [Cboe Market Volatility Index](https://research.investors.com/psychological-market-indicators/chart?type=volatility), or VIX, shot up 74% to 27.67. That's the highest close since Aug. 7 and a sure sign that investors are frightened.
+错误原因](javascript:void(0))
 
 
-Yet, that could be a silver lining. The VIX rose more than 20% above its 10-day moving average — an extreme spike that heralded market lows in April, August, September and November. A few other times the signal occurred, the market low was a bit fuzzy.
+The Dow Jones Industrial Average fell 2.6% for its 10th consecutive decline — the longest since an 11-day losing streak that ended Oct. 4, 1974, according to Dow Jones Market Data. The Dow also fell below the 50-day average.[重试
+  
+ 
 
 
-After Wednesday's thrashing, multiple leading stocks suffered significant damage. The IBD 50 index slid 4.8%.
 
+错误原因](javascript:void(0))
 
-**Blue Owl Capital** ([OWL](https://research.investors.com/quote.aspx?symbol=OWL)), **Howmet Aerospace** ([HWM](https://research.investors.com/quote.aspx?symbol=HWM)), **Comfort Systems** ([FIX](https://research.investors.com/quote.aspx?symbol=FIX)), **Corcept Therapeutics** ([CORT](https://research.investors.com/quote.aspx?symbol=CORT)) and **Clearwater Analytics** ([CWAN](https://research.investors.com/quote.aspx?symbol=CWAN)) closed below their 50-day lines.
 
+Small caps, which are more sensitive to interest rates, plummeted. The Russell 2000 sold off 4.4% and pierced its 50-day moving average. It was the Russell's worst performance on a Fed decision day ever recorded.[重试
+  
+ 
 
-**ServiceNow** ([NOW](https://research.investors.com/quote.aspx?symbol=NOW)), **Royal Caribbean** ([RCL](https://research.investors.com/quote.aspx?symbol=RCL)), **Sezzle** ([SEZL](https://research.investors.com/quote.aspx?symbol=SEZL)), **ACI Worldwide** ([ACIW](https://research.investors.com/quote.aspx?symbol=ACIW)) and **Commvault Systems** ([CVLT](https://research.investors.com/quote.aspx?symbol=CVLT)) were some of the other highly rated stocks that came under pressure.
 
 
-That type of action is enough for investors to start raising cash. With the change in market exposure, it's smart to take some profits and be vigilant about sell signals. [Cutting losses short](https://www.investors.com/how-to-invest/investors-corner/still-the-no-1-rule-for-stock-investors-always-cut-your-losses-short/) is vitally important at this point.
+错误原因](javascript:void(0))
 
 
-Fed Outlook Chills Stock Market
--------------------------------
+Volume rose on the Nasdaq exchange and New York Stock Exchange, which confirmed a [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) for both the Nasdaq composite and S&P 500 indexes. Institutional-caliber selling is quickly building up. That danger, plus the break of support levels on the main stock indexes, is why Investor's Business Daily cut its recommended exposure level to 60%-80% from 80% to 100%.[重试
+  
+ 
 
 
-The Federal Reserve Wednesday concluded with what just about everyone expected: a quarter-point cut in the Fed funds rate. But the central bank surprised Wall Street with a thinner slate of planned rate cuts for next year.
 
+错误原因](javascript:void(0))
 
-The Fed's forecasts showed [only two quarter-point rate cuts in 2025](https://www.investors.com/news/economy/federal-reserve-meeting-december-rate-cut-jerome-powell-trump-sp-500/). That's half the cuts the Federal Reserve penciled in during September, and Fed Chair Jerome Powell called the economy's performance strong enough to keep monetary policy on a steady pace.
 
+Breadth Worsens For Stock Market[重试
+  
+ 
 
-"From here, it's a new phase, and we're going to be cautious about further cuts," Powell said. Some policymakers factored in the potential for more inflation if President-elect Donald Trump carries out threats of more tariffs.
 
 
-Federal Reserve officials' median forecast for the Fed funds rate at the end of 2025 is now at 3.9%, vs. the previous forecast of 3.4%.
+错误原因](javascript:void(0))
+---------------------------------------------------------------------
 
 
-Even the widely expected quarter-point rate cut Wednesday came with a hitch. Cleveland Fed President Beth Hammack voted against it, saying the Fed should have left rates unchanged at a 4.5% to 4.75% target rate.
+Breadth was decisively bearish. Declining stocks topped advancers by more than 13-1 on the NYSE and by 6-1 on the Nasdaq, according to FactSet. All 11 S&P 500 sectors fell as did nearly 90% of IBD's industry groups.[重试
+  
+ 
 
 
-The 10-year Treasury yield jumped 11 basis points to 4.49%.
 
+错误原因](javascript:void(0))
 
-No Cheer For Stock Market
--------------------------
 
+The [Cboe Market Volatility Index](https://research.investors.com/psychological-market-indicators/chart?type=volatility), or VIX, shot up 74% to 27.67. That's the highest close since Aug. 7 and a sure sign that investors are frightened.[重试
+  
+ 
 
-"Goodbye punch bowl. No Christmas cheer from the Fed," TradeStation Global Head of Market Strategy David Russell said in a note to the media. "Policymakers see higher inflation and lower unemployment (next year). There is simply no reason to be dovish given that outlook. The easy lifting is done now that rates are no longer clearly restrictive. It's a logical time to pause."
 
 
-The Fed, Russell added, has engineered a soft landing and now "They're taking off the training wheels. Let's see if the economy can stand upright or falls over."
+错误原因](javascript:void(0))
 
 
-Investors' attention now shifts from monetary policy to the fiscal policies of the new White House, he added.
+Yet, that could be a silver lining. The VIX rose more than 20% above its 10-day moving average — an extreme spike that heralded market lows in April, August, September and November. A few other times the signal occurred, the market low was a bit fuzzy.[重试
+  
+ 
 
 
-"The economy is now in Trump's hands, for better or worse," Russell said.
 
+错误原因](javascript:void(0))
 
-[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121824.pdf)
 
+After Wednesday's thrashing, multiple leading stocks suffered significant damage. The IBD 50 index slid 4.8%.[重试
+  
+ 
 
-**YOU MAY ALSO LIKE:**
 
 
-[The Four Pillars Of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
+错误原因](javascript:void(0))
 
 
-[Risk Management In The Stock Market: How Much Money To Invest](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+**Blue Owl Capital** ([OWL](https://research.investors.com/quote.aspx?symbol=OWL)), **Howmet Aerospace** ([HWM](https://research.investors.com/quote.aspx?symbol=HWM)), **Comfort Systems** ([FIX](https://research.investors.com/quote.aspx?symbol=FIX)), **Corcept Therapeutics** ([CORT](https://research.investors.com/quote.aspx?symbol=CORT)) and **Clearwater Analytics** ([CWAN](https://research.investors.com/quote.aspx?symbol=CWAN)) closed below their 50-day lines.[重试
+  
+ 
 
 
-[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
 
+错误原因](javascript:void(0))
 
-[Dow Dives 1,100 Points On Fed; Chip Giant Plunges Late](https://www.investors.com/market-trend/stock-market-today/dow-jones-dives-1100-points-on-fed-outlook-tesla-skids-micron-plunges-late-on-earnings/)
+
+**ServiceNow** ([NOW](https://research.investors.com/quote.aspx?symbol=NOW)), **Royal Caribbean** ([RCL](https://research.investors.com/quote.aspx?symbol=RCL)), **Sezzle** ([SEZL](https://research.investors.com/quote.aspx?symbol=SEZL)), **ACI Worldwide** ([ACIW](https://research.investors.com/quote.aspx?symbol=ACIW)) and **Commvault Systems** ([CVLT](https://research.investors.com/quote.aspx?symbol=CVLT)) were some of the other highly rated stocks that came under pressure.[重试
+  
+ 
+
+
+
+错误原因](javascript:void(0))
+
+
+That type of action is enough for investors to start raising cash. With the change in market exposure, it's smart to take some profits and be vigilant about sell signals. [Cutting losses short](https://www.investors.com/how-to-invest/investors-corner/still-the-no-1-rule-for-stock-investors-always-cut-your-losses-short/) is vitally important at this point.[重试
+  
+ 
+
+
+
+错误原因](javascript:void(0))
+
+
+Fed Outlook Chills Stock Market[重试
+  
+ 
+
+
+
+错误原因](javascript:void(0))
+--------------------------------------------------------------------
+
+
+The Federal Reserve Wednesday concluded with what just about everyone expected: a quarter-point cut in the Fed funds rate. But the central bank surprised Wall Street with a thinner slate of planned rate cuts for next year.[重试
+  
+ 
+
+
+
+错误原因](javascript:void(0))
+
+
+The Fed's forecasts showed [only two quarter-point rate cuts in 2025](https://www.investors.com/news/economy/federal-reserve-meeting-december-rate-cut-jerome-powell-trump-sp-500/). That's half the cuts the Federal Reserve penciled in during September, and Fed Chair Jerome Powell called the economy's performance strong enough to keep monetary policy on a steady pace.[重试
+  
+ 
+
+
+
+错误原因](javascript:void(0))
+
+
+"From here, it's a new phase, and we're going to be cautious about further cuts," Powell said. Some policymakers factored in the potential for more inflation if President-elect Donald Trump carries out threats of more tariffs.[重试
+  
+ 
+
+
+
+错误原因](javascript:void(0))
+
+
+Federal Reserve officials' median forecast for the Fed funds rate at the end of 2025 is now at 3.9%, vs. the previous forecast of 3.4%.[重试
+  
+ 
+
+
+
+错误原因](javascript:void(0))
+
+
+Even the widely expected quarter-point rate cut Wednesday came with a hitch. Cleveland Fed President Beth Hammack voted against it, saying the Fed should have left rates unchanged at a 4.5% to 4.75% target rate.[重试
+  
+ 
+
+
+
+错误原因](javascript:void(0))
+
+
+The 10-year Treasury yield jumped 11 basis points to 4.49%.[重试
+  
+ 
+
+
+
+错误原因](javascript:void(0))
+
+
+No Cheer For Stock Market[重试
+  
+ 
+
+
+
+错误原因](javascript:void(0))
+--------------------------------------------------------------
+
+
+"Goodbye punch bowl. No Christmas cheer from the Fed," TradeStation Global Head of Market Strategy David Russell said in a note to the media. "Policymakers see higher inflation and lower unemployment (next year). There is simply no reason to be dovish given that outlook. The easy lifting is done now that rates are no longer clearly restrictive. It's a logical time to pause."[重试
+  
+ 
+
+
+
+错误原因](javascript:void(0))
+
+
+The Fed, Russell added, has engineered a soft landing and now "They're taking off the training wheels. Let's see if the economy can stand upright or falls over."[重试
+  
+ 
+
+
+
+错误原因](javascript:void(0))
+
+
+Investors' attention now shifts from monetary policy to the fiscal policies of the new White House, he added.[重试
+  
+ 
+
+
+
+错误原因](javascript:void(0))
+
+
+"The economy is now in Trump's hands, for better or worse," Russell said.  
+
+
+[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121824.pdf) 
+
+
+**YOU MAY ALSO LIKE:** 
+
+
+[The Four Pillars Of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/) 
+
+
+[Risk Management In The Stock Market: How Much Money To Invest](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/) 
+
+
+[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A) 
+
+
+[Dow Dives 1,100 Points On Fed; Chip Giant Plunges Late](https://www.investors.com/market-trend/stock-market-today/dow-jones-dives-1100-points-on-fed-outlook-tesla-skids-micron-plunges-late-on-earnings/) 
 
 
 
