--- a/_columns/The_Big_Picture/zh-cn/2024-12-20.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-20.md
@@ -10,90 +10,98 @@ author: MICHAEL LARKIN
 
 
 
-The stock market finished a bruising week with a flourish Friday following a benevolent inflation reading, setting the stage for a possible Santa Claus rally.
+The stock market finished a bruising week with a flourish Friday following a benevolent inflation reading, setting the stage for a possible Santa Claus rally.  
 
 
-The Nasdaq composite ended the day well off session highs, but still gained 1%. While it closed back above the [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) it suffered a weekly decline of 1.8%. The tech-heavy index retains a strong gain of 30.4% so far in 2024.
+The Nasdaq composite ended the day well off session highs, but still gained 1%. While it closed back above the [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) it suffered a weekly decline of 1.8%. The tech-heavy index retains a strong gain of 30.4% so far in 2024.  
 
 
 
 
-The S&P 500 also closed well of highs but turned in a 1.1% lift. It suffered its second weekly drop in a row though, falling 2%. The benchmark index ended the day a hair above [its 50-day moving average.](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/) Its bump for the year now sits at 24.3%.
+The S&P 500 also closed well of highs but turned in a 1.1% lift. It suffered its second weekly drop in a row though, falling 2%. The benchmark index ended the day a hair above [its 50-day moving average.](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/) Its bump for the year now sits at 24.3%.  
 
 
-Advancers outstripped decliners by nearly 3-to-1 on the New York Stock Exchange and by more than 2-to-1 on the Nasdaq. Volume was well higher, but distorted due to triple-witching. This is the session in the quarter when stock options, stock index futures, and stock index options contracts all expire on the same day.
+Advancers outstripped decliners by nearly 3-to-1 on the New York Stock Exchange and by more than 2-to-1 on the Nasdaq. Volume was well higher, but distorted due to triple-witching. This is the session in the quarter when stock options, stock index futures, and stock index options contracts all expire on the same day.  
 
 
-The Dow Jones Industrial Average fared best out of the major indexes as it popped 1.2% Friday. But bears punched it 2.3% lower for the week and it now sits 1.6% below its 10-week moving average. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) and **UnitedHealth** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) were the best performers on the closely watched index.
+The Dow Jones Industrial Average fared best out of the major indexes as it popped 1.2% Friday. But bears punched it 2.3% lower for the week and it now sits 1.6% below its 10-week moving average. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) and **UnitedHealth** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) were the best performers on the closely watched index.  
 
 
-Small caps also made gains, with the Russell 2000 rising 0.9%. It managed to hold above its [200-day moving average](https://www.investors.com/how-to-invest/investors-corner/sell-rule-no-21-use-200-day-line-to-spot-overheating/) despite a painful weekly decline of 4.8%. The Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund rallied 2.3% Friday, finding support at its 50-day line.
+Small caps also made gains, with the Russell 2000 rising 0.9%. It managed to hold above its [200-day moving average](https://www.investors.com/how-to-invest/investors-corner/sell-rule-no-21-use-200-day-line-to-spot-overheating/) despite a painful weekly decline of 4.8%. The Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund rallied 2.3% Friday, finding support at its 50-day line.  
 
 
 Bullish Action But Maintain This Exposure
 -----------------------------------------
 
 
-Stocks got a boost after the personal consumption expenditures index for November rose by less than economists expected. This is the Fed's favored inflation gauge. Headline PCE rose 2.4% on an annualized basis while core PCE was up 2.8% year over year.
+Stocks got a boost after the personal consumption expenditures index for November rose by less than economists expected. This is the Fed's favored inflation gauge. Headline PCE rose 2.4% on an annualized basis while core PCE was up 2.8% year over year.  
 
 
-![](https://www.investors.com/wp-content/uploads/2024/12/MP122024.jpg)Chicago Federal Reserve Bank President Austan Goolsbee, who is on the Federal Open Market Committee, also gave stocks a boost by [telling CNBC](https://www.cnbc.com/) that interest rates should be lowered by a "fair amount" next year. Nevertheless, indexes still suffered weekly declines due to the more hawkish stance taken by the Federal Reserve earlier in the week.
+![](https://www.investors.com/wp-content/uploads/2024/12/MP122024.jpg)Chicago Federal Reserve Bank President Austan Goolsbee, who is on the Federal Open Market Committee, also gave stocks a boost by [telling CNBC](https://www.cnbc.com/) that interest rates should be lowered by a "fair amount" next year. Nevertheless, indexes still suffered weekly declines due to the more hawkish stance taken by the Federal Reserve earlier in the week.  
 
 
-While indexes made solid gains Friday, with the Nasdaq recapturing its 21-day line and the S&P 500 ending dead on its 50-day moving average, IBD is holding its recommended exposure level at the 60% to 80% level. Due to the day's encouraging action it makes sense to be at the higher end of the range.
+While indexes made solid gains Friday, with the Nasdaq recapturing its 21-day line and the S&P 500 ending dead on its 50-day moving average, IBD is holding its recommended exposure level at the 60% to 80% level. Due to the day's encouraging action it makes sense to be at the higher end of the range.  
 
 
-Now the stage looks set for a Santa Claus rally, defined as the final five trading days of the year and the first two trading days of the New Year. Investors should take care to increase exposure at a measured pace and continue to respect sell signals within their portfolios.
+Now the stage looks set for a Santa Claus rally, defined as the final five trading days of the year and the first two trading days of the New Year. Investors should take care to increase exposure at a measured pace and continue to respect sell signals within their portfolios.  
 
 
-While markets will be closing early on Christmas Eve and shuttered all of Christmas Day, there is still a light sprinkling of economic data due. A consumer confidence reading is due Monday while durable orders and new-home sales data is scheduled for Tuesday. Initial jobless claims number come Thursday while investors expect advanced retail and wholesale inventories data Friday.
+While markets will be closing early on Christmas Eve and shuttered all of Christmas Day, there is still a light sprinkling of economic data due. A consumer confidence reading is due Monday while durable orders and new-home sales data is scheduled for Tuesday. Initial jobless claims number come Thursday while investors expect advanced retail and wholesale inventories data Friday.  
 
 
-However [the cupboard is bare on the earnings front](https://www.investors.com/research/earnings-preview/palantir-stock-ai-stock-earnings-power/), which will also be the case the following week.
+However [the cupboard is bare on the earnings front](https://www.investors.com/research/earnings-preview/palantir-stock-ai-stock-earnings-power/), which will also be the case the following week.  
 
 
 No Festive Cheer For These Stock Market Sectors
 -----------------------------------------------
 
 
-All of the [S&P 500 sectors ended Friday higher](https://www.investors.com/category/etfs-and-funds/sectors/). Real estate, utilities and technology were the strongest areas, while consumer staples made the slimmest gains. But recent declines mean materials and energy are almost flat for the year. Communication services leads the pack with a year-to-date gain just shy of 35%.
+All of the [S&P 500 sectors ended Friday higher](https://www.investors.com/category/etfs-and-funds/sectors/). Real estate, utilities and technology were the strongest areas, while consumer staples made the slimmest gains. But recent declines mean materials and energy are almost flat for the year. Communication services leads the pack with a year-to-date gain just shy of 35%.  
 
 
 
-The relative performance of Investor's Business Daily's 197 industry groups offers deeper insight into the [action on Friday's stock market](https://www.investors.com/news/stock-market-today-stock-market-news/).
+The relative performance of Investor's Business Daily's 197 industry groups offers deeper insight into the [action on Friday's stock market](https://www.investors.com/news/stock-market-today-stock-market-news/).  
 
 
-The vast majority ended higher, with computer hardware stocks, solar plays, fiber-optics companies and data-storage plays among the best performers.
+The vast majority ended higher, with computer hardware stocks, solar plays, fiber-optics companies and data-storage plays among the best performers.  
 
 
-The ethical drugs group also ended solidly higher despite **Novo Nordisk** ([NVO](https://research.investors.com/quote.aspx?symbol=NVO)) plunging due to underwhelming late-stage trial results for its experimental weight loss drug CagriSema. [Novo fell 17.8%](https://www.investors.com/news/technology/novo-nordisk-dives-cagrisegma-obesity-drug-trial-eli-lilly-viking-therapeutics/) and more than 22% below its 50-day line.
+The ethical drugs group also ended solidly higher despite **Novo Nordisk** ([NVO](https://research.investors.com/quote.aspx?symbol=NVO)) plunging due to underwhelming late-stage trial results for its experimental weight loss drug CagriSema. [Novo fell 17.8%](https://www.investors.com/news/technology/novo-nordisk-dives-cagrisegma-obesity-drug-trial-eli-lilly-viking-therapeutics/) and more than 22% below its 50-day line.  
 
 
-In contrast, book companies, logistics firms, metal products distributors and trucking plays were among the worst performers.
+In contrast, book companies, logistics firms, metal products distributors and trucking plays were among the worst performers.  
+相比之下，图书公司、物流公司、金属产品分销商和卡车运输公司表现最差。
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_122024.pdf).
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_122024.pdf).  
+[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_122024.pdf)。
 
 
-*Please follow Michael Larkin on X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.*
+*Please follow Michael Larkin on X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.  
+请关注 Michael Larkin 在 X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) 上的更多分析。*
 
 
-**YOU MAY ALSO LIKE:**
+**YOU MAY ALSO LIKE:  您可能还喜欢：**
 
 
-[IBD Stock Of The Day Earns Positive Reviews For New Service](https://www.investors.com/research/ibd-stock-of-the-day/applovin-stock-ramping-ecommerce-ads-engine/)
+[IBD Stock Of The Day Earns Positive Reviews For New Service  
+IBD 今日股票因新服务获得正面评价](https://www.investors.com/research/ibd-stock-of-the-day/applovin-stock-ramping-ecommerce-ads-engine/)
 
 
-[This Big-Cap Oracle Rival That Funds Are Buying Eyes An Entry](https://www.investors.com/stock-lists/ibd-big-cap-20/big-cap-supply-chain-software-stock-manhattan-associates-oracle/)
+[This Big-Cap Oracle Rival That Funds Are Buying Eyes An Entry  
+基金正在购买的这家大型甲骨文竞争对手正在关注一个入场点](https://www.investors.com/stock-lists/ibd-big-cap-20/big-cap-supply-chain-software-stock-manhattan-associates-oracle/)
 
 
-[These Are The Five Best Stocks To Buy And Watch Now](https://www.investors.com/research/best-stocks-to-buy-now/)
+[These Are The Five Best Stocks To Buy And Watch Now  
+这些是现在购买和观看的五只最佳股票](https://www.investors.com/research/best-stocks-to-buy-now/)
 
 
-[Join IBD Live Each Morning For Stock Tips Before The Open](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+[Join IBD Live Each Morning For Stock Tips Before The Open  
+每天早上加入 IBD Live，在开盘前获取股票提示](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
 
 
-[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
+[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?  
+这是沃伦·巴菲特 （Warren Buffett） 的终极股票，但您应该购买它吗？](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
 
 
 
